# tmpltr

./: AUTHORS  ChangeLog  Makefile.am  NEWS  README  README.md  TODO  bootstrap  configure.ac  tmpltr.1.in  version.m4
include/: common.h  sysdep.h
m4/: version.m4
src/: Makefile.am  bintree.c  bintree.h  chains.c  chains.h  char_class.c  hash.c  hash.h  main.c  main.h  match.c  match.h  mem.c  mem.h  parser.c  parser.h  parser_interface.c  parser_interface.h  string_intern.c  string_intern.h  tmpltr.c  tmpltr.h  util.c  util.h
tests/: Makefile  README.md  create_expected_outputs.sh  run_tests.sh
tests/scripts/: generate_test_data.sh
